unpackaged/main/default/objects/Litigation_Tracking__c/Litigation_Tracking__c.object-meta.xml
<CustomObject>
    <description>EDF Custom object to track EDF potential and active litigation, proceedings and  regulatory cases</description>
    <label>Legal Tracking</label>
    <nameField>
        <displayFormat>{YYYY} - {0}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>