unpackaged/main/default/objects/Litigation_Tracking__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bureau of Land Mgmt</fullName>
            </value>
            <value>
                <fullName>Colorado Air Quality Control Commission</fullName>
            </value>
            <value>
                <fullName>Dept of Energy</fullName>
            </value>
            <value>
                <fullName>Dept of Interior</fullName>
            </value>
            <value>
                <fullName>EPA</fullName>
            </value>
            <value>
                <fullName>FDA</fullName>
            </value>
            <value>
                <fullName>Intl Civil Aviation Organization</fullName>
            </value>
            <value>
                <fullName>Natl Oceanic &amp; Atmospheric Admin</fullName>
            </value>
            <value>
                <fullName>State environmental agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>