unpackaged/main/default/objects/Litigation_Tracking__c/fields/Case_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Date__c</fullName>
    <label>Case Closed Date</label>
    <type>Date</type>
</CustomField>