unpackaged/main/default/objects/Litigation_Tracking__c/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <label>Case/Docket/Regulation Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>