unpackaged/main/default/objects/Litigation_Tracking__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case/Docket Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>