unpackaged/main/default/objects/Litigation_Tracking__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA PUC</fullName>
            </value>
            <value>
                <fullName>FERC</fullName>
            </value>
            <value>
                <fullName>FL PSC</fullName>
            </value>
            <value>
                <fullName>IL Commerce Commission</fullName>
            </value>
            <value>
                <fullName>NC Utilities Commission</fullName>
            </value>
            <value>
                <fullName>NJ BPU</fullName>
            </value>
            <value>
                <fullName>LA PSC</fullName>
            </value>
            <value>
                <fullName>NY PSC</fullName>
            </value>
            <value>
                <fullName>OH PUC</fullName>
            </value>
            <value>
                <fullName>PA PUC</fullName>
            </value>
            <value>
                <fullName>TX PUC</fullName>
            </value>
            <value>
                <fullName>MA DPU</fullName>
            </value>
            <value>
                <fullName>MN PUC</fullName>
            </value>
            <value>
                <fullName>NH PUC</fullName>
            </value>
            <value>
                <fullName>IN URC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>