unpackaged/main/default/objects/Litigation_Tracking__c/fields/Court_Forum__c.field-meta.xml
<CustomField>
    <fullName>Court_Forum__c</fullName>
    <label>Court or Forum</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Venue_or_Agency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>D.C. Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>District of D.C.</fullName>
            </value>
            <value>
                <fullName>1st Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>2nd Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>3rd Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>4th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>5th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>6th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>7th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>8th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>9th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>10th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>11th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>U.S. Supreme Court</fullName>
            </value>
            <value>
                <fullName>PUC California</fullName>
            </value>
            <value>
                <fullName>PUC Texas</fullName>
            </value>
            <value>
                <fullName>PUC Illinois</fullName>
            </value>
            <value>
                <fullName>PUC Ohio</fullName>
            </value>
            <value>
                <fullName>PUC Pennsylvania</fullName>
            </value>
            <value>
                <fullName>PUC New York</fullName>
            </value>
            <value>
                <fullName>PUC New Jersey</fullName>
            </value>
            <value>
                <fullName>PUC Florida</fullName>
            </value>
            <value>
                <fullName>PUC North Carolina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>