unpackaged/main/default/objects/Litigation_Tracking__c/fields/District_Region__c.field-meta.xml
<CustomField>
    <fullName>District_Region__c</fullName>
    <label>District Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Court_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central District</fullName>
            </value>
            <value>
                <fullName>Middle District</fullName>
            </value>
            <value>
                <fullName>Eastern District</fullName>
            </value>
            <value>
                <fullName>Western District</fullName>
            </value>
            <value>
                <fullName>Southern District</fullName>
            </value>
            <value>
                <fullName>Northern District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>