unpackaged/main/default/objects/Litigation_Tracking__c/fields/EDF_Role__c.field-meta.xml
<CustomField>
    <fullName>EDF_Role__c</fullName>
    <label>EDF Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amicus</fullName>
            </value>
            <value>
                <fullName>Appellant</fullName>
            </value>
            <value>
                <fullName>Appellee</fullName>
            </value>
            <value>
                <fullName>Complainant</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Defendant-Intervenor</fullName>
            </value>
            <value>
                <fullName>Intervenor</fullName>
            </value>
            <value>
                <fullName>Petitioner</fullName>
            </value>
            <value>
                <fullName>Petitioner-Intervenor</fullName>
            </value>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Plaintiff-Intervenor</fullName>
            </value>
            <value>
                <fullName>Respondent</fullName>
            </value>
            <value>
                <fullName>Respondent-Intervenor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>