unpackaged/main/default/objects/Litigation_Tracking__c/fields/Final_Regulation_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Regulation_Date__c</fullName>
    <description>Date field for Regulatory matter  record type</description>
    <label>Final Regulation Date</label>
    <type>Date</type>
</CustomField>