unpackaged/main/default/objects/Litigation_Tracking__c/fields/Government_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Government_Involvement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if federal or state government agency is involved</description>
    <inlineHelpText>Check if federal or state government agency is involved</inlineHelpText>
    <label>Government Involvement</label>
    <type>Checkbox</type>
</CustomField>