unpackaged/main/default/objects/Litigation_Tracking__c/fields/Lead_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Lead_Attorney__c</fullName>
    <label>Lead Attorney</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adam Peltz</fullName>
            </value>
            <value>
                <fullName>Alice Henderson</fullName>
            </value>
            <value>
                <fullName>Amanda Johnson</fullName>
            </value>
            <value>
                <fullName>Andy Su</fullName>
            </value>
            <value>
                <fullName>Ben Levitan</fullName>
            </value>
            <value>
                <fullName>Christie Hicks</fullName>
            </value>
            <value>
                <fullName>Cole Jermyn</fullName>
            </value>
            <value>
                <fullName>Dan Grossman</fullName>
            </value>
            <value>
                <fullName>Edwin LaMair</fullName>
            </value>
            <value>
                <fullName>Elizabeth Stein</fullName>
            </value>
            <value>
                <fullName>Erica Morehouse</fullName>
            </value>
            <value>
                <fullName>Erin Murphy</fullName>
            </value>
            <value>
                <fullName>Grace Smith</fullName>
            </value>
            <value>
                <fullName>Grace Weatherall</fullName>
            </value>
            <value>
                <fullName>Graham McCahan</fullName>
            </value>
            <value>
                <fullName>Holly Pearen</fullName>
            </value>
            <value>
                <fullName>Jim Marston</fullName>
            </value>
            <value>
                <fullName>Jim Tripp</fullName>
            </value>
            <value>
                <fullName>John Finnigan</fullName>
            </value>
            <value>
                <fullName>Jolette Westbrook</fullName>
            </value>
            <value>
                <fullName>Larissa Koehler</fullName>
            </value>
            <value>
                <fullName>Lauren Navarro</fullName>
            </value>
            <value>
                <fullName>Martha Roberts</fullName>
            </value>
            <value>
                <fullName>Michael Colvin</fullName>
            </value>
            <value>
                <fullName>Michael Panfil</fullName>
            </value>
            <value>
                <fullName>Monica Goldberg</fullName>
            </value>
            <value>
                <fullName>Naim Jonathan Peress</fullName>
            </value>
            <value>
                <fullName>Natalie Karas</fullName>
            </value>
            <value>
                <fullName>Nichole Saunders</fullName>
            </value>
            <value>
                <fullName>Noha Haggag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>