unpackaged/main/default/objects/Litigation_Tracking__c/fields/Related_Contract__c.field-meta.xml
<CustomField>
    <fullName>Related_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Legal_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>