unpackaged/main/default/objects/Litigation_Tracking__c/fields/Venue_or_Agency__c.field-meta.xml
<CustomField>
    <fullName>Venue_or_Agency__c</fullName>
    <label>Venue or Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US Court of Appeals</fullName>
            </value>
            <value>
                <fullName>US Supreme Court</fullName>
            </value>
            <value>
                <fullName>US District Court</fullName>
            </value>
            <value>
                <fullName>PUC</fullName>
            </value>
            <value>
                <fullName>EPA</fullName>
            </value>
            <value>
                <fullName>FERC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>