unpackaged/main/default/objects/Litigation_Tracking__c/fields/Venue_or_State__c.field-meta.xml
<CustomField>
    <fullName>Venue_or_State__c</fullName>
    <label>Venue or State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Court_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Supreme Court</fullName>
            </value>
            <value>
                <fullName>10th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>11th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>1st Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>2nd Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>3rd Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>4th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>5th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>6th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>7th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>8th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>9th Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>D.C. Circuit Court of Appeals</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>District of D.C.</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Georgia</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Idaho</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Iowa</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>