unpackaged/main/default/objects/Litigation_Tracking__c/recordTypes/Court_Case.recordType-meta.xml
<RecordType>
    <fullName>Court_Case</fullName>
    <active>true</active>
    <label>Court Case</label>
</RecordType>