unpackaged/main/default/objects/Litigation_Tracking__c/recordTypes/FERC_PUC_Proceedings.recordType-meta.xml
<RecordType>
    <fullName>FERC_PUC_Proceedings</fullName>
    <active>true</active>
    <label>FERC/PUC Proceedings</label>
</RecordType>