unpackaged/main/default/objects/Litigation_Tracking__c/listViews/All_Court_Cases.listView-meta.xml
<ListView>
    <fullName>All_Court_Cases</fullName>
    <columns>NAME</columns>
    <columns>Case_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Case_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Litigation_Tracking__c.Court_Case</value>
    </filters>
    <label>All Court Cases</label>
</ListView>