unpackaged/main/default/objects/Litigation_Tracking__c/listViews/EDF_All_Items.listView-meta.xml
<ListView>
    <fullName>EDF_All_Items</fullName>
    <columns>NAME</columns>
    <columns>Case_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Case_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>EDF All Items</label>
</ListView>